--- a/RationalConsoleAppDemo/RationalConsoleAppDemo.csproj
+++ b/RationalConsoleAppDemo/RationalConsoleAppDemo.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RationalLib\RationalLib.csproj" />
+  </ItemGroup>
+
 </Project>
